# ocv2.4.10_app

./: .gitignore  CMakeLists.txt  README_renlin.txt  csh_cmake
MSys_renlin_201607/: CMakeCache.txt
VS08_x86_201607/: CMakeCache.txt
src/: CMakeLists.txt
src/ApplicationProgrammingCookbook_2nd/: CMakeLists.txt  Config.h.in
src/ApplicationProgrammingCookbook_2nd/Ch01/: CMakeLists.txt  loadDisplaySave.cpp
src/ApplicationProgrammingCookbook_2nd/Ch01/include/: Config.h
src/ApplicationProgrammingCookbook_2nd/Ch02/: CMakeLists.txt  saltImage.cpp
src/ApplicationProgrammingCookbook_2nd/Ch02/include/: Config.h
src/ApplicationProgrammingCookbook_2nd/Ch03/: CMakeLists.txt  colorDetection.cpp  huesaturation.cpp
src/ApplicationProgrammingCookbook_2nd/Ch03/include/: Config.h
src/ApplicationProgrammingCookbook_2nd/Ch04/: CMakeLists.txt  colorhistogram.h  contentFinder.cpp  contentFinder.h  finder.cpp  histograms.cpp  imageComparator.h  integral.cpp  retrieve.cpp  tracking.cpp
src/ApplicationProgrammingCookbook_2nd/Ch04/include/: Config.h
src/ApplicationProgrammingCookbook_2nd/Ch05/: CMakeLists.txt  morpho2.cpp  morphology.cpp  mserFeatures.cpp  segment.cpp
src/ApplicationProgrammingCookbook_2nd/Ch05/include/: Config.h
src/ApplicationProgrammingCookbook_2nd/Ch06/: CMakeLists.txt  derivatives.cpp  filters.cpp
src/ApplicationProgrammingCookbook_2nd/Ch06/include/: Config.h
src/ApplicationProgrammingCookbook_2nd/Ch07/: CMakeLists.txt  blobs.cpp  contours.cpp
src/ApplicationProgrammingCookbook_2nd/Ch07/include/: Config.h
src/ApplicationProgrammingCookbook_2nd/Ch08/: CMakeLists.txt  interestPoints.cpp
src/ApplicationProgrammingCookbook_2nd/Ch08/include/: Config.h
src/MasteringOpenCVWithPracticalCVProjects/: CMakeLists.txt
src/MasteringOpenCVWithPracticalCVProjects/Chapter5_NumberPlateRecognition/: CMakeLists.txt
src/tutorial/: CMakeLists.txt  Config.h.in  t001_DisplayImage.cpp
src/tutorial/include/: Config.h
